Fixed horizontal scroll issue on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -667,6 +667,7 @@ a {
   max-width: 1140px;
   margin: 0 auto;
   padding: 2rem 1rem;
+  overflow: hidden;
 }
 
 /* Navigation Bar */
